Manage SDKs with nix (#22)
* Manage SDKs with nix

The server downloaded, hash checked, unpacked and chmodded every SDK itself,
and hardcoded each SDK type's install layout and invocation. The metadata for
the same SDKs was duplicated in Sdks.kt, and many downloads had no hash at all.

nix/sdks.nix now defines every SDK, both its metadata and its package. Each SDK
is an attrset with a `meta` part (name, aliases, release, warnings, lombok
support) and a `runtime` part describing how to invoke it: the compiler command,
an alternative command for lombok, the javap command and the environment. How an
SDK is packaged is now confined to its own definition, so for instance a kotlin
maven jar and a kotlin zip distribution no longer differ anywhere else.

gradle evaluates `nix eval .#sdkMetadata` to generate the metadata for the shared
module, which does not build any SDK. The server reads the manifest built by
`nix build .#sdks -o sdk`, which also lists the store paths to make readable in
the sandbox, and it has a single generic RunnableSdk instead of per-type code.

meta.compiler is the option dialect (javac, ecj, kotlinc, scalac), the only SDK
distinction the client and the compiler configuration actually need, so
Sdk.KotlinJar and Sdk.KotlinDistribution collapse into Sdk.Kotlin.

The generated metadata is identical to the previous hardcoded values.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>

* Package the server itself with nix, verify deps.json in CI

flake.nix now builds the whole server (packages.default/server), not just the
SDKs: same gradle_9 pin, offline yarn/gradle dependency caches (nix/deps.json,
moved from a downstream nixos-config repo that had reimplemented this), and a
stub `nix` binary so shared/build.gradle.kts's `nix eval .#sdkMetadata` call
works inside the sandboxed build without needing network or a real nix.

`nix run .#update-deps` refreshes nix/deps.json after a dependency bump, and
a `devShells.default` provides a matching JDK for runn